[gd_scene load_steps=2 format=3 uid="uid://cg3vinl51qa1q"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_mhwor"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhwor")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="New_game_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="Load_game_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load game"

[node name="Options_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New_game_button" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load_game_button" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options_button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit_button" to="." method="_on_quit_pressed"]
